packages/taquito-michel-codec/test/contracts_015/ill_typed/view_toplevel_invalid_arity.tz
parameter nat ;
storage nat ;
code { CAR ; NIL operation ; PAIR } ;
view "add" nat nat nat { UNPAIR ; ADD } ;
